--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
+mat-sidenav-container,
+mat-sidenav-content,
+mat-sidenav {
+  height: 100%;
+}
 
+mat-sidenav {
+  width: 250px;
+}
 
 /*# sourceMappingURL=app.component.css.map */
